# clash

./: .gitignore  .release-please-manifest.json  AGENTS.md  Cargo.toml  LICENSE  README.md  \  deny.toml  init.14695981039346656037.zsh  install.sh  justfile  omp.cache  release-please-config.json  release.toml  rust-toolchain.toml  zsh.1dbeb70a-51bd-4b21-8319-b1d7a3fb206b.omp.cache
clash/: CHANGELOG.md  Cargo.toml  README.md  build.rs  clash-amazonq  clash-codex  clash-copilot  clash-gemini-ext  clash-opencode
clash-brush-builtins/: Cargo.toml  LICENSE
clash-brush-builtins/src/: enable.rs  fc.rs  read.rs  type_.rs  ulimit.rs  unset.rs
clash-brush-core/: Cargo.toml
clash-brush-core/src/: builtins.rs  callstack.rs  commands.rs  completion.rs  escape.rs  expansion.rs  history.rs  int_utils.rs  interp.rs  lib.rs  openfiles.rs  shell.rs  terminal.rs  traps.rs  wellknownvars.rs
clash-brush-core/src/shell/: builder.rs  initscripts.rs
clash-brush-interactive/: Cargo.toml
clash-brush-interactive/src/: completion.rs  interactive_shell.rs
clash-brush-interactive/src/reedline/: history.rs
clash-brush-parser/: Cargo.toml
clash-brush-parser/src/: ast.rs
clash-brush-parser/src/snapshots/: clash_brush_parser__tokenizer__tests__tokenize_arithmetic_expression.snap  clash_brush_parser__tokenizer__tests__tokenize_arithmetic_expression_with_parens.snap  clash_brush_parser__tokenizer__tests__tokenize_arithmetic_expression_with_space.snap  clash_brush_parser__tokenizer__tests__tokenize_backquote_with_escape.snap  clash_brush_parser__tokenizer__tests__tokenize_braced_parameter_expansion-2.snap  clash_brush_parser__tokenizer__tests__tokenize_braced_parameter_expansion.snap  clash_brush_parser__tokenizer__tests__tokenize_braced_parameter_expansion_with_escaping.snap  clash_brush_parser__tokenizer__tests__tokenize_command_substitution.snap  clash_brush_parser__tokenizer__tests__tokenize_command_substitution_containing_extglob.snap  clash_brush_parser__tokenizer__tests__tokenize_command_substitution_with_subshell.snap  clash_brush_parser__tokenizer__tests__tokenize_comment.snap  clash_brush_parser__tokenizer__tests__tokenize_comment_at_eof.snap  clash_brush_parser__tokenizer__tests__tokenize_complex_here_docs_in_command_substitution.snap  clash_brush_parser__tokenizer__tests__tokenize_double_quote.snap  clash_brush_parser__tokenizer__tests__tokenize_double_quoted_arithmetic_expression.snap  clash_brush_parser__tokenizer__tests__tokenize_double_quoted_command_substitution.snap  clash_brush_parser__tokenizer__tests__tokenize_empty_here_doc.snap  clash_brush_parser__tokenizer__tests__tokenize_escaped_whitespace.snap  clash_brush_parser__tokenizer__tests__tokenize_here_doc-2.snap  clash_brush_parser__tokenizer__tests__tokenize_here_doc-3.snap  clash_brush_parser__tokenizer__tests__tokenize_here_doc-4.snap  clash_brush_parser__tokenizer__tests__tokenize_here_doc.snap  clash_brush_parser__tokenizer__tests__tokenize_here_doc_in_command_substitution.snap  clash_brush_parser__tokenizer__tests__tokenize_here_doc_in_double_quoted_command_substitution.snap  clash_brush_parser__tokenizer__tests__tokenize_here_doc_in_double_quoted_command_substitution_with_space.snap  clash_brush_parser__tokenizer__tests__tokenize_here_doc_with_other_tokens.snap  clash_brush_parser__tokenizer__tests__tokenize_here_doc_with_tab_removal.snap  clash_brush_parser__tokenizer__tests__tokenize_line_continuation.snap  clash_brush_parser__tokenizer__tests__tokenize_multiple_here_docs.snap  clash_brush_parser__tokenizer__tests__tokenize_operators.snap  clash_brush_parser__tokenizer__tests__tokenize_simple_backquote.snap  (+23 more)
clash-lsp/: Cargo.toml
clash-lsp/src/: documents.rs  lib.rs  server.rs
clash-lsp/tests/: diagnostics.rs
clash-policy/: Cargo.toml
clash-policy/src/: compile.rs  diff.rs  format.rs  ir.rs  lib.rs  manifest_edit.rs  match_tree.rs  sandbox_edit.rs  sandbox_types.rs  test_eval.rs
clash-wasm/: Cargo.toml
clash-wasm/src/: engine.rs  lib.rs
clash/examples/: policy.dtree  policy.sexpr  policy.toml  policy.yaml  v1.sexpr  v2.sexpr
clash/shell_redirect/: README.md  build.sh  claude_shell  libshell_redirect.dylib  shell_redirect.c  shell_redirect.sh
clash/src/: attachment_create.graphql  audit.rs  builtin_clash_profile.sexp  builtin_clash_profile.yaml  builtin_claude_profile.sexp  builtin_claude_profile.yaml  cli.rs  default_policy.json  default_policy.sexp  default_policy.sexpr  default_policy.star  default_policy.yaml  dialog.rs  display.rs  ecosystem.rs  errors.rs  file_upload.graphql  git.rs  handlers.rs  harness.rs  hooks.rs  internal_clash.json  internal_clash.sexpr  internal_clash.star  internal_claude.json  internal_claude.sexpr  internal_claude.star  issue_create.graphql  lib.rs  linear.rs  main.rs  network_hints.rs  notifications.rs  permissions.rs  policy_decision.rs  policy_loader.rs  presets.rs  sandbox_cmd.rs  sandbox_fs_hints.rs  schema.rs  (+14 more)
clash/src/agents/: mod.rs  (+7 more)
clash/tests/: cli_help_snapshots.rs
clash_hooks/: Cargo.toml
clash_hooks/src/: event.rs  lib.rs  response.rs  tool_input.rs  wire.rs
clash_hooks/tests/: integration.rs
clash_notify/: Cargo.toml
clash_notify/src/: lib.rs  linux.rs  macos.rs
clash_starlark/: Cargo.toml
clash_starlark/src/: cache.rs  compile.rs  eval_context.rs  globals.rs  import_json.rs  lib.rs  loader.rs  settings_compat.rs  stdlib.rs  test_support.rs  when.rs
clash_starlark/stdlib/: builtin.star  claude_compat.star  docker.star  dotnet.star  go.star  java.star  make.star  match_tree.star  node.star  python.star  ruby.star  rust.star  sandboxes.star  std.star  swift.star
clash_starlark/tests/: dsl_keys.rs  policy_tree.rs  root_key_rule.rs  sandbox_tree.rs
claude_hooks/: Cargo.toml
claude_hooks/src/: input.rs  lib.rs  output.rs  tools.rs
claude_settings/: Cargo.toml
claude_settings/fuzz/: Cargo.toml
claude_settings/src/: error.rs  guard.rs  io.rs  lib.rs  merge.rs  paths.rs  permission.rs  sandbox.rs  types.rs
clester/: CHANGELOG.md  Cargo.toml  README.md
clester/src/: assertions.rs  environment.rs  main.rs  runner.rs  script.rs
(+651 files in other folders)
