[workspace]
members = ["clash", "clash_notify", "claude_settings", "clester"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["json", "toml", "yaml"] }
regex = "1"
bitflags = "2"
serde = { version = "1", features = ["derive"] }
serde_regex = "1"
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
toml = "0.8"
dirs = "6.0.0"
pest = "2"
pest_derive = "2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "std",
    "fmt",
    "registry",
] }

# Workspace crates
clash_notify = { path = "clash_notify" }
claude_settings = { path = "claude_settings" }

landlock = "0.4"
seccompiler = "0.4"
libc = "0.2"

uuid = { version = "1", features = ["v4"] }
ureq = "2"
lexpr = "0.2"
base64 = "0.22"
dialoguer = "0.11"
mac-notification-sys = "0.6"
notify-rust = "4"

# Dev dependencies
tempfile = "3"
proptest = "1"
mockito = "1"
