[workspace]
members = [
    "clash",
    "clash_notify",
    "claude_settings",
    "clash_starlark",
    "clester",
    "clash-brush-parser",
    "clash-brush-core",
    "clash-brush-builtins",
    "clash-brush-interactive",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/empathic/clash"
homepage = "https://github.com/empathic/clash"
documentation = "https://github.com/empathic/clash"

[workspace.dependencies]
allocative = "0.3"
anyhow = "1"
arbitrary = { version = "1.4.2", features = ["derive"] }
async-recursion = "1.1.1"
async-trait = "0.1.89"
base64 = "0.22"
bitflags = "2"
bon = "3.9.0"
bytes = "1"
cached = "0.56.0"
cfg-if = "1.0.4"
chrono = "0.4"
clap = { version = "4", features = ["derive", "wrap_help"] }
color-print = "0.3.7"
command-fds = "0.3.2"
console = "0.15"
criterion = { version = "0.8.2", features = ["html_reports"] }
crossterm = "0.29"
dialoguer = "0.11"
dirs = "6.0.0"
fancy-regex = "0.17.0"
figment = { version = "0.10", features = ["json", "toml", "yaml"] }
flate2 = "1"
futures = "0.3.32"
getrandom = { version = "0.4.1", features = ["wasm_js"] }
hostname = "0.4.2"
hotln = "0.1.4"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
include_dir = { version = "0.7.4", features = ["glob"] }
indenter = "0.3.4"
indexmap = "2.13.0"
inherent = "1.0.13"
insta = "1"
itertools = "0.14.0"
lexpr = "0.2"
libc = "0.2"
mac-notification-sys = "0.6"
miette = { version = "7.6.0", default-features = false, features = ["derive"] }
nix = { version = "0.31.2", features = [
    "fs",
    "poll",
    "process",
    "resource",
    "signal",
    "term",
    "user",
] }
normalize-path = "0.2.1"
notify-rust = "4"
nu-ansi-term = "0.50"
nucleo-matcher = "0.3"
peg = "0.8.5"
pest = "2"
pest_derive = "2"
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
procfs = "0.18.0"
proptest = "1"
mockito = "1"
radix_trie = "0.3.0"
rand = "0.10.0"
ratatui = "0.30"
reedline = "0.46.0"
regex = "1"
rlimit = "0.11.0"
rpds = "1.2.0"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_regex = "1"
serde_yaml = "0.9"
sha2 = "0.10"
shlex = "1"
similar = "2"
starlark = "0.13"
strum = "0.28.0"
strum_macros = "0.28.0"
tar = "0.4"
tempfile = "3"
terminfo = "0.9.0"
thiserror = "2"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "sync",
    "time",
    "macros",
    "process",
    "signal",
] }
toml = "0.8"
toolpath = "0.1"
toolpath-claude = { version = "0.4", default-features = false }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "std",
    "fmt",
    "registry",
] }
ureq = "2"
utf8-chars = "3.0.6"
uuid = { version = "1", features = ["v4"] }
uucore = { version = "0.6.0", default-features = false, features = ["format"] }
uzers = "0.12.2"
which = "7"
whoami = "2.1.1"
winnow = { version = "0.7.14" }

landlock = "0.4"
seccompiler = "0.4"

# Workspace crates
clash-brush-builtins = { path = "clash-brush-builtins", version = "0.4.5" }
clash_notify = { path = "clash_notify", version = "0.4.5" }
clash_starlark = { path = "clash_starlark", version = "0.4.5" }
claude_settings = { path = "claude_settings", version = "0.4.5" }
clash-brush-parser = { path = "clash-brush-parser", version = "0.4.5" }
clash-brush-core = { path = "clash-brush-core", version = "0.4.5" }
clash-brush-interactive = { path = "clash-brush-interactive", version = "0.4.5", features = [
    "basic",
] }

# Workspace crate aliases (used by brush crates internally under original brush-* names)
brush-parser = { path = "clash-brush-parser", version = "0.4.5", package = "clash-brush-parser" }
brush-core = { path = "clash-brush-core", version = "0.4.5", package = "clash-brush-core" }
