[package]
name = "clash-brush-builtins"
description = "Builtins for a POSIX/bash shell (used by brush-shell)"
version = "0.4.5"
authors = ["reuben olinsky"]
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
rust-version.workspace = true
keywords = ["cli", "shell", "sh", "bash", "script"]
license = "MIT"
repository = "https://github.com/reubeno/brush"

[lib]
bench = false

[features]
default = [
    'builtin.alias',
    'builtin.bg',
    'builtin.bind',
    'builtin.break',
    'builtin.builtin',
    'builtin.caller',
    'builtin.cd',
    'builtin.colon',
    'builtin.command',
    'builtin.compgen',
    'builtin.compopt',
    'builtin.complete',
    'builtin.continue',
    'builtin.declare',
    'builtin.dirs',
    'builtin.dot',
    'builtin.echo',
    'builtin.enable',
    'builtin.eval',
    'builtin.exec',
    'builtin.exit',
    'builtin.export',
    'builtin.false',
    'builtin.fc',
    'builtin.fg',
    'builtin.getopts',
    'builtin.hash',
    'builtin.help',
    'builtin.history',
    'builtin.jobs',
    'builtin.kill',
    'builtin.let',
    'builtin.mapfile',
    'builtin.popd',
    'builtin.printf',
    'builtin.pushd',
    'builtin.pwd',
    'builtin.read',
    'builtin.return',
    'builtin.set',
    'builtin.shift',
    'builtin.shopt',
    'builtin.suspend',
    'builtin.test',
    'builtin.times',
    'builtin.trap',
    'builtin.true',
    'builtin.type',
    'builtin.ulimit',
    'builtin.umask',
    'builtin.unalias',
    'builtin.unset',
    'builtin.wait',
]

'builtin.alias' = []
'builtin.bg' = []
'builtin.bind' = []
'builtin.break' = []
'builtin.builtin' = []
'builtin.caller' = []
'builtin.cd' = []
'builtin.colon' = []
'builtin.command' = []
'builtin.compgen' = []
'builtin.complete' = []
'builtin.compopt' = []
'builtin.continue' = []
'builtin.declare' = []
'builtin.dirs' = []
'builtin.dot' = []
'builtin.echo' = []
'builtin.enable' = []
'builtin.eval' = []
'builtin.exec' = []
'builtin.exit' = []
'builtin.export' = []
'builtin.false' = []
'builtin.fc' = []
'builtin.fg' = []
'builtin.getopts' = []
'builtin.hash' = []
'builtin.help' = []
'builtin.history' = []
'builtin.jobs' = []
'builtin.kill' = []
'builtin.let' = []
'builtin.mapfile' = []
'builtin.popd' = []
'builtin.printf' = []
'builtin.pushd' = []
'builtin.pwd' = []
'builtin.read' = []
'builtin.return' = []
'builtin.set' = []
'builtin.shift' = []
'builtin.shopt' = []
'builtin.suspend' = []
'builtin.test' = []
'builtin.times' = []
'builtin.trap' = []
'builtin.true' = []
'builtin.type' = []
'builtin.ulimit' = []
'builtin.umask' = []
'builtin.unalias' = []
'builtin.unset' = []
'builtin.wait' = []

[dependencies]
brush-core = { workspace = true }
brush-parser = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
fancy-regex = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true }

[target.'cfg(any(unix, windows))'.dependencies]
tokio = { workspace = true }
uucore = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
rlimit = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
