[package]
name = "clash-brush-core"
description = "Reusable core of a POSIX/bash shell (used by brush-shell)"
version = "0.5.0"
authors = ["reuben olinsky"]
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
rust-version.workspace = true
keywords = ["cli", "shell", "sh", "bash", "script"]
license = "MIT"
repository = "https://github.com/reubeno/brush"

[lib]
bench = false

[features]
default = []
serde = ["dep:serde", "brush-parser/serde", "rpds/serde", "chrono/serde"]
experimental-parser = ["brush-parser/winnow-parser"]

[dependencies]
async-recursion = { workspace = true }
async-trait = { workspace = true }
brush-parser = { workspace = true }
bon = { workspace = true }
cached = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
color-print = { workspace = true }
fancy-regex = { workspace = true }
futures = { workspace = true }
inherent = { workspace = true }
itertools = { workspace = true }
normalize-path = { workspace = true }
rand = { workspace = true }
rpds = { workspace = true }
serde = { workspace = true, optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true }

[target.'cfg(any(unix, windows))'.dependencies]
hostname = { workspace = true }
tokio = { workspace = true }

[target.'cfg(windows)'.dependencies]
whoami = { workspace = true }

[target.'cfg(unix)'.dependencies]
command-fds = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
terminfo = { workspace = true }
uzers = { workspace = true }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { workspace = true }
uuid = { workspace = true, features = ["js"] }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
