[package]
name = "clash-brush-interactive"
description = "Interactive layer of brush-shell"
version = "0.4.4"
authors = ["reuben olinsky"]
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
rust-version.workspace = true
keywords = ["cli", "shell", "sh", "bash", "script"]
license = "MIT"
repository = "https://github.com/reubeno/brush"

[lib]
bench = false

[features]
default = []
basic = ["dep:crossterm", "completion"]
completion = []
minimal = []
reedline = ["dep:reedline", "dep:nu-ansi-term", "completion", "highlighting"]
highlighting = []

[dependencies]
bon = "3.9.0"
brush-parser = { version = "^0.3.0", path = "../clash-brush-parser", package = "clash-brush-parser" }
brush-core = { version = "^0.4.0", path = "../clash-brush-core", package = "clash-brush-core" }
crossterm = { version = "0.29.0", features = ["serde"], optional = true }
indexmap = "2.13.0"
nu-ansi-term = { version = "0.50.3", optional = true }
radix_trie = "0.3.0"
reedline = { version = "0.46.0", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt", "sync"] }
tracing = "0.1.44"

[dev-dependencies]
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
