[package]
name = "clash-brush-interactive"
description = "Interactive layer of brush-shell"
version = "0.5.0"
authors = ["reuben olinsky"]
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
rust-version.workspace = true
keywords = ["cli", "shell", "sh", "bash", "script"]
license = "MIT"
repository = "https://github.com/reubeno/brush"

[lib]
bench = false

[features]
default = []
basic = ["dep:crossterm", "completion"]
completion = []
minimal = []
reedline = ["dep:reedline", "dep:nu-ansi-term", "completion", "highlighting"]
highlighting = []

[dependencies]
brush-parser = { workspace = true }
bon = { workspace = true }
brush-core = { workspace = true }
crossterm = { workspace = true, optional = true, features = ["serde"] }
indexmap = { workspace = true }
nu-ansi-term = { workspace = true, optional = true }
radix_trie = { workspace = true }
reedline = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
