[package]
name = "clash-brush-parser"
description = "POSIX/bash shell tokenizer and parsers (used by brush-shell)"
version = "0.4.4"
authors = ["reuben olinsky"]
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
rust-version.workspace = true
keywords = ["cli", "shell", "sh", "bash", "script"]
license = "MIT"
repository = "https://github.com/reubeno/brush"

[lib]
bench = false

[features]
arbitrary = ["dep:arbitrary"]
debug-tracing = ["peg/trace"]
diagnostics = ["dep:miette"]
serde = ["dep:serde"]
winnow-parser = ["dep:winnow"]

[dependencies]
arbitrary = { workspace = true, optional = true }
bon = { workspace = true }
cached = { workspace = true }
indenter = { workspace = true }
insta = { workspace = true, features = ["redactions"] }
miette = { workspace = true, optional = true }
peg = { workspace = true }
serde = { workspace = true, optional = true, features = ["rc"] }
thiserror = { workspace = true }
tracing = { workspace = true }
utf8-chars = { workspace = true }
winnow = { workspace = true, optional = true }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { workspace = true }
uuid = { workspace = true, features = ["js"] }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true, features = ["glob", "ron", "yaml", "redactions"] }
miette = { workspace = true, features = ["fancy"] }
pretty_assertions = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
