[package]
name = "clash-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clash_starlark.workspace = true
starlark.workspace = true
lsp-types.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "io-std", "macros", "sync"] }
tower-lsp.workspace = true
tracing.workspace = true

[dev-dependencies]
indoc.workspace = true
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "sync", "time"] }
