[package]
name = "clash"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
claude_settings = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
dirs = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
regex = { workspace = true }
serde_regex = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
lexpr = { workspace = true }

libc = { workspace = true }
clash_notify = { workspace = true }
uuid = { workspace = true }
ureq = { workspace = true }
base64 = { workspace = true }
dialoguer = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
mockito = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }
seccompiler = { workspace = true }
