[package]
name = "clash"
version = "0.3.1"
edition = "2024"
description = "Command Line Agent Safety Harness — permission policies for Claude Code"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
dirs = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
regex = { workspace = true }
serde_regex = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
lexpr = { workspace = true }

libc = { workspace = true }
uuid = { workspace = true }
hotln = { workspace = true }
ureq = { workspace = true }
base64 = { workspace = true }
console = { workspace = true }
nu-ansi-term = { workspace = true }
reedline = { workspace = true }
similar = { workspace = true }
dialoguer = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

# from the workspace
clash_notify = { workspace = true }
claude_settings = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
mockito = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }
seccompiler = { workspace = true }
