[package]
name = "clash"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Command Line Agent Safety Harness — permission policies for coding agents"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
dirs = { workspace = true }
fs2 = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
libc = { workspace = true }
hotln = { workspace = true }
ureq = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
semver = { workspace = true }
which = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
chrono = { workspace = true }
toolpath = { workspace = true }
toolpath-claude = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }

# from the workspace
clash_notify = { workspace = true }
clash_starlark = { workspace = true }
claude_settings = { workspace = true }
clash-brush-builtins = { workspace = true }
clash-brush-core = { workspace = true }
clash-brush-interactive = { workspace = true }

[features]
default = []

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
mockito = { workspace = true }
insta = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }
seccompiler = { workspace = true }
