[package]
name = "clash_notify"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
description = "Desktop notification support for clash"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = { workspace = true }
