[package]
name = "clash_starlark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Starlark policy evaluator for Clash — compiles .star files to JSON policy"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
starlark = { workspace = true }
allocative = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
include_dir = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-starlark = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
