[package]
name = "claude_hooks"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Types and traits for building Claude Code hook handlers"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
