[package]
name = "claude_settings"
version = "0.1.0"
edition = "2024"
description = "A library for reading and writing Claude Code settings on Unix-like systems"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors = ["Empathic Team"]

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
figment = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
