[package]
name = "clester"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "End-to-end testing tool for clash - simulates Claude Code hook invocations"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
clap = { workspace = true }
shlex = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
